Fix layout problems on smaller screens

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -38,7 +38,9 @@ body {
   box-shadow: 0 3px 8px rgba(0, 0, 0, 0.2);
   background: white;
   border-radius: 2px;
-  height: 100px;
+}
+.horizontal-space-20 {
+  width: 20px;
 }
 .legendHeading {
   font-weight: bold;
